--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
         <script src="main.js" type="text/javascript"></script>
     </head>
     <body>
+        
         <header>
             <img id="logga" alt="logga" src="bilder/orange_logga.png">
-            <img class="clicked" onclick="openCloseMenu()" src="bilder/black_circle.png" id="openmeny">
+            <!--<img alt="meny" class="clicked" onclick="openCloseMenu()" src="bilder/black_circle.png" id="openmeny">-->
         </header>
         <div id="meny">
             <a href="#" class="menylink">Våra Jobb</a>
             <a href="#" class="menylink">Om Oss</a>
             <a href="#" class="menylink">Kontakt</a>
-            <img onclick="openCloseMenu()" src="bilder/circle.png" id="closemeny">
+            <img alt="menu_open_close" onclick="openCloseMenu()" src="bilder/circle.png" id="closemeny">
+        </div>
+        <div id="frontmenu">
+            <a id="frontlink1" class="frontlinks" href="http://philipdev.se/hemsidor/cweb/jobb/"><p>Våra Jobb</p></a>
+            <a id="frontlink2" class="frontlinks" href="http://philipdev.se/hemsidor/cweb/kontakt/"><p>Kontakt</p></a>
+            <a id="omoss" class="frontlinks" href="#"><img src="bilder/omoss.png" alt="omoss"></a>
         </div>
         <div id="wrapper">
             
