--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <link href="main.css" rel="stylesheet" type="text/css">
         <script src="main.js" type="text/javascript"></script>
     </head>
-    <body>
-        
+    <body id="body">
         <header>
             <img id="logga" alt="logga" src="bilder/orange_logga.png">
             <!--<img alt="meny" class="clicked" onclick="openCloseMenu()" src="bilder/black_circle.png" id="openmeny">-->
