--- a/jobb/index.html
+++ b/jobb/index.html
@@ -9,7 +9,10 @@
         <script src="../main.js" type="text/javascript"></script>
     </head>
     <body>
-        
+        <div id="background">
+            <video id="backvideo" src="/bilder/White-Keyboard/MP4/White-Keyboard.mp4" autoplay loop></video>
+        </div>
+
         <header>
             <img id="logga" alt="logga" src="../bilder/orange_logga.png">
             <img alt="meny" class="clicked" onclick="openCloseMenu()" src="../bilder/black_circle.png" id="openmeny">
@@ -22,11 +25,10 @@
         </div>
         <div id="workdiv">
             <div>
-                <a href="link">Jobb 1</a>
-                <a href="link">Jobb 2</a>
-                <a href="link">Jobb 3</a>
-                <a href="link">Jobb 4</a>
-                <a href="link">Jobb 5</a>
+                <a href="http://lamixstore.com/">LAMIX</a>
+                <a href="http://ludan.se/">Ludan</a>
+                <h2 class="offer">Vill du ha en hemsida?</h2>
+                <a href="philipdev.se/hemsidor/cweb/kontakt/">Kontakta oss!</a>
             </div>
         </div>
     </body>
