--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -10,7 +10,9 @@
     </head>
     <body>
         <header>
-            <img id="logga" alt="logga" src="../bilder/orange_logga.png">
+            <a href="http://philipdev.se/hemsidor/cweb/">
+                <img id="logga" alt="logga" src="../bilder/orange_logga.png">
+            </a>
             <img alt="meny" class="clicked" onclick="openCloseMenu()" src="../bilder/black_circle.png" id="openmeny">
         </header>
         <div id="meny">
