--- a/about/index.html
+++ b/about/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 scalable=no">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <meta charset="utf-8">
-        <title>CWEB | Våra Jobb</title>
+        <title>CWEB | Om Oss</title>
         <link href="../main.css" rel="stylesheet" type="text/css">
         <script src="../main.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="background">
-            <video id="backvideo" src="../bilder/White-Keyboard/MP4/White-Keyboard.mp4" autoplay loop></video>
-        </div>
-
         <header>
-            <a href="http://philipdev.se/cweb/">
+            <a href="http://cweb.se/">
                 <img id="logga" alt="logga" src="../bilder/orange_logga.png">
             </a>
             <!-- img alt="meny" class="clicked" onclick="openCloseMenu()" src="../bilder/menyknapp" id="openmeny" -->
         </header>
         <div id="meny">
-            <a href="http://philipdev.se/cweb/jobb/" class="menylink">Våra Jobb</a>
-            <a href="http://philipdev.se/cweb/about/" class="menylink">Om Oss</a>
-            <a href="http://philipdev.se/cweb/kontakt/" class="menylink">Kontakt</a>
+            <a href="http://cweb.se/jobb/" class="menylink">Våra Jobb</a>
+            <a href="http://cweb.se/about/" class="menylink">Om Oss</a>
+            <a href="http://cweb.se/kontakt/" class="menylink">Kontakt</a>
             <img alt="menu_open_close" onclick="openCloseMenu()" src="../bilder/stangknapp" id="closemeny">
         </div>
-        <div id="workdiv">
+        <div id="aboutdiv">
             <div>
-                <a href="http://lamixstore.com/">LAMIX</a>
-                <a href="http://ludan.se/">Ludan</a>
-                <h2 class="offer">Vill du ha en hemsida?</h2>
-                <a href="philipdev.se/cweb/kontakt/">Kontakta oss!</a>
+                <h2 id="vemh2" class="offer">Vem är vi?</h2>
+                <p class="aboutus">
+                    CWEB är ett företag som består av tre studenter från Malmö Högskola. Vi startade våran treåriga utbildning 2015. När vi är klara med utbildingen kommer vi att vara Informationsarkitekter. Förhoppningsvis kommer fler människor veta vad en informationsarkitekt sysslar med tills dess.
+                </p>
+                <a class="knappar" href="http://cweb.se/kontakt/">Kontakta oss om du har fler frågor.</a>
             </div>
         </div>
         <div id="bot_meny">
